@startuml academico-db
    entity enderecos {
        *id : integer <<sequence|not null>>
        *cep : integer <<not null>>
        *rua : character varying <<not null>>
        *bairro : character varying <<not null>>
        *cidade : character varying <<not null>>
        *estado : character varying <<not null>>
        *status : character varying (10) <<not null>>
        --
        id : <<primary key>>
    }
    entity professores {
        *matricula : integer <<not null>>
        *nome : character varying <<not null>>
        *sobrenome : character varying <<not null>>
        *idade : integer <<not null>>
        *naturalidade : character varying <<not null>>
        *sexo : char <<not null>>
        *cpf : character varying <<not null>>
        *salario : money <<not null>>
        *carga_horaria: integer <<not null>>
        *id_endereco : integer <<not null>>
        --
        matricula : <<primary key>>
        id_endereco : <<foreign key>> 
    }
    entity alunos {
        *matricula : integer <<not null>>
        *nome : character varying <<not null>>
        *sobrenome : character varying <<not null>>
        *idade : integer <<not null>>
        *naturalidade : character varying <<not null>>
        *sexo : char <<not null>>
        *cpf : character varying <<not null>>
        *curso : character varying <<not null>>
        *matriculado : boolean <<not null>>
        *aprovado: boolean <<not null>>
        *id_endereco : integer <<not null>>
        --
        matricula : <<primary key>>
        id_endereco : <<foreign key>>
    }
    entity notas {
        *id : integer <<sequence|not null>>
        *valor : real <<not null>>
        *peso : integer <<not null>>
        *matricula_aluno : integer <<not null>>
        --
        id : <<primary key>>
        matricula_aluno : <<foreign key>> 
    }
    professores }o--|| enderecos
    alunos }o--|| enderecos
    alunos ||--|{ notas
@enduml academico-db